Fix navbar sublinks not clickable on small devices

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -235,11 +235,23 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
   .top-5 {
     top: calc(var(--spacing) * 5);
   }
   .top-8 {
     top: calc(var(--spacing) * 8);
+  }
+  .top-22 {
+    top: calc(var(--spacing) * 22);
+  }
+  .top-23 {
+    top: calc(var(--spacing) * 23);
+  }
+  .top-24 {
+    top: calc(var(--spacing) * 24);
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
@@ -249,6 +261,9 @@
   }
   .right-6 {
     right: calc(var(--spacing) * 6);
+  }
+  .right-8 {
+    right: calc(var(--spacing) * 8);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
@@ -315,6 +330,12 @@
   }
   .mt-\[35px\] {
     margin-top: 35px;
+  }
+  .mt-\[45px\] {
+    margin-top: 45px;
+  }
+  .mt-\[55px\] {
+    margin-top: 55px;
   }
   .mt-\[67px\] {
     margin-top: 67px;
@@ -443,6 +464,12 @@
   .-rotate-180 {
     rotate: calc(180deg * -1);
   }
+  .rotate-90 {
+    rotate: 90deg;
+  }
+  .rotate-180 {
+    rotate: 180deg;
+  }
   .cursor-pointer {
     cursor: pointer;
   }
@@ -494,9 +521,6 @@
   .gap-1 {
     gap: calc(var(--spacing) * 1);
   }
-  .gap-1\.5 {
-    gap: calc(var(--spacing) * 1.5);
-  }
   .gap-2 {
     gap: calc(var(--spacing) * 2);
   }
@@ -540,11 +564,32 @@
       margin-block-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
+  .space-y-3 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 3) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
   .space-y-4 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 4) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 4) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-5 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .space-y-8 {
@@ -897,12 +942,6 @@
     font-size: var(--text-xs);
     line-height: var(--tw-leading, var(--text-xs--line-height));
   }
-  .text-\[85\%\] {
-    font-size: 85%;
-  }
-  .text-\[100\%\] {
-    font-size: 100%;
-  }
   .font-bold {
     --tw-font-weight: var(--font-weight-bold);
     font-weight: var(--font-weight-bold);
@@ -958,9 +997,6 @@
   }
   .text-white {
     color: var(--color-white);
-  }
-  .font-stretch-100\% {
-    font-stretch: 100%;
   }
   .underline {
     text-decoration-line: underline;
@@ -1054,6 +1090,16 @@
       @media (hover: hover) {
         opacity: 100%;
       }
+    }
+  }
+  .peer-active\:pointer-events-auto {
+    &:is(:where(.peer):active ~ *) {
+      pointer-events: auto;
+    }
+  }
+  .peer-active\:opacity-100 {
+    &:is(:where(.peer):active ~ *) {
+      opacity: 100%;
     }
   }
   .before\:pointer-events-none {
@@ -1240,6 +1286,21 @@
   .sm\:mt-\[45px\] {
     @media (width >= 40rem) {
       margin-top: 45px;
+    }
+  }
+  .sm\:mt-\[55px\] {
+    @media (width >= 40rem) {
+      margin-top: 55px;
+    }
+  }
+  .sm\:mt-\[60px\] {
+    @media (width >= 40rem) {
+      margin-top: 60px;
+    }
+  }
+  .sm\:mt-\[70px\] {
+    @media (width >= 40rem) {
+      margin-top: 70px;
     }
   }
   .sm\:ml-1 {
